--- a/index.html
+++ b/index.html
@@ -82,9 +82,17 @@
   <div class="small">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" alt="cHocolate chip cookie">
 
-  <div class="narrative">
-    <h2>NEWS BITES</h2>
-    <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+  <div class="news">
+    <h2>NEWS BITES</h2></div>
+    <p>
+      <span class="bite">Cat Emoji Goes Viral</span>
+      <span class="bite">Buy Youtube Views</span>
+      <span class="bite">Home Business Advertising Ideas</span>
+      <span class="bite">Advertising Internet Online</span>
+      <span class="bite">Illustration in Marketing Materials</span>
+      <span class="bite">Finally a Top Secret Way You Can</span>
+
+    </p>
   </div>
   </div>
 
@@ -92,6 +100,30 @@
 
 
 </div>
+
+<footer>
+
+   <div class="list">
+       <span class="title">MY Times</span>
+    <nav>
+      <span><a href="#">World</a></span>
+      <span><a href="#">U.S.</a></span>
+      <span><a href="#">Tech</a></span>
+      <span><a href="#">Science</a></span>
+    </nav>
+  </div>
+
+  <div class="copyright">
+    <span>&copy 2016, My Times (A Division of Codecademy bite)</span>
+ </div>
+
+ </div>
+
+
+
+
+
+</footer>
 
 
 
